--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.container{
+    margin: 0px auto;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.container {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1180px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.input-class {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #000;
+    border-radius: 0;
+    background: transparent;
+}
+.input-class:focus {
+    border: none;
+    border-bottom: 1px solid #000;
+}
+
+.button-class {
+    text-align: center;
+    width: 50%;
+    border: none;
+    border-bottom: 1px solid #000;
+    border-radius: 0;
+    background: transparent;
+}
+.tugma {
+    text-align: center;
+    width: 100px;
+
+    border: none;
+    border-bottom: 1px solid #000;
+    border-radius: 0;
+    background: transparent; 
+}
+.kreslo {
+    height: 90vh;
+    background-color: antiquewhite;
+}
+.tugma-3 {
+    margin-top: 10px;
+    padding: 8px 20px;
+    border: 1px solid black;
+}
+.Hero {
+    width: 100%;
+}
+.card-2 {
+    height: 60vh;
 }
